sample monitors configuration

--- a/main/hypr/hyprland.conf
+++ b/main/hypr/hyprland.conf
@@ -8,7 +8,7 @@ source = ~/.config/hypr/hyprhost.conf
 # general monitor configuration
 #############################
 
-monitor=,preferred,auto,1,mirror,eDP-1
+monitor=, highres, auto, 1
 
 #############################
 # Execute on startup
@@ -27,35 +27,35 @@ exec-once = hyprctl dispatch workspace 10
 
 # general window configuration
 general {
-    gaps_in = 5
-    gaps_out = 10
-    border_size = 2
-    col.active_border = rgb(000000)
-    col.inactive_border = rgba(595959aa)
-    layout = dwindle
+  gaps_in = 5
+  gaps_out = 10
+  border_size = 2
+  col.active_border = rgb(000000)
+  col.inactive_border = rgba(595959aa)
+  layout = dwindle
 }
 
 # appearance settings
 decoration {
-    rounding = 5
-    blur = no
+  rounding = 5
+  blur = no
 
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+  drop_shadow = yes
+  shadow_range = 4
+  shadow_render_power = 3
+  col.shadow = rgba(1a1a1aee)
 }
 
 # animations configuration
 animations {
-    enabled = yes
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+  enabled = yes
+  bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+  animation = windows, 1, 7, myBezier
+  animation = windowsOut, 1, 7, default, popin 80%
+  animation = border, 1, 10, default
+  animation = borderangle, 1, 8, default
+  animation = fade, 1, 7, default
+  animation = workspaces, 1, 6, default
 }
 
 #############################
@@ -64,13 +64,13 @@ animations {
 
 # pseudotiling
 dwindle {
-    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P
-    preserve_split = yes # you probably want this
+  pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P
+  preserve_split = yes # you probably want this
 }
 
 # focus to new window
 master {
-    new_is_master = true
+  new_is_master = true
 }
 
 #############################
