--- a/laptop/hypr/hyprhost.conf
+++ b/laptop/hypr/hyprhost.conf
@@ -5,6 +5,12 @@
 # main monitor declaration
 monitor = eDP-1, 1920x1080@60, 0x0, 1
 
+# trigger when the switch is turning off
+bindl = , switch:off:Lid Switch, exec,hyprctl keyword monitor "eDP-1, 1920x1080@60, 0x0, 1"
+
+# trigger when the switch is turning on
+bindl = , switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disable"
+
 #############################
 # Execute on startup (host)
 #############################
