--- a/laptop/hypr/hyprpaper.conf
+++ b/laptop/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
 preload = ~/dotfiles/wallpapers/color-abstract.jpg
-wallpaper = eDP-1, ~/dotfiles/wallpapers/color-abstract.jpg
+wallpaper = , ~/dotfiles/wallpapers/color-abstract.jpg
 ipc = off
