added rofi normal run keybind

--- a/main/hypr/hyprland.conf
+++ b/main/hypr/hyprland.conf
@@ -83,6 +83,7 @@ $mainModShift = SUPER_SHIFT
 
 # window keybinds
 bindr = $mainMod, SUPER_L, exec, pkill rofi || rofi -show drun #app launcher
+bind = $mainMod, R, exec, pkill rofi || rofi -show run #general launcher
 bind = $mainMod, Z, exec, pkill rofi || rofi -show calc #calculatorhypr
 bind = ALT, F4, exec, pkill rofi || power.sh #powermenu
 bind = $mainMod, Q, exec, alacritty # terminal emulator (default)
