--- a/main/alacritty/alacritty.yml
+++ b/main/alacritty/alacritty.yml
@@ -1,30 +1,30 @@
 colors:
   # Default colors
   primary:
-    background: "0x24283b"
-    foreground: "0xc0caf5"
+    background: "#24283b"
+    foreground: "#c0caf5"
 
   # Normal colors
   normal:
-    black: "0x1d202f"
-    red: "0xf7768e"
-    green: "0x9ece6a"
-    yellow: "0xe0af68"
-    blue: "0x4d46db"
-    magenta: "0xbb9af7"
-    cyan: "0x7dcfff"
-    white: "0xa9b1d6"
+    black: "#1d202f"
+    red: "#f7768e"
+    green: "#9ece6a"
+    yellow: "#e0af68"
+    blue: "#4d46db"
+    magenta: "#bb9af7"
+    cyan: "#7dcfff"
+    white: "#a9b1d6"
 
   # Bright colors
   bright:
-    black: "0x414868"
-    red: "0xf7768e"
-    green: "0x9ece6a"
-    yellow: "0xe0af68"
-    blue: "0x7aa2f7"
-    magenta: "0xbb9af7"
-    cyan: "0x7dcfff"
-    white: "0xc0caf5"
+    black: "#414868"
+    red: "#f7768e"
+    green: "#9ece6a"
+    yellow: "#e0af68"
+    blue: "#7aa2f7"
+    magenta: "#bb9af7"
+    cyan: "#7dcfff"
+    white: "#c0caf5"
 cursor:
   style:
     blinking: Off
@@ -43,7 +43,7 @@ font:
   normal:
     family: "MesloLGS Nerd Font"
     style: Medium
-  size: 13
+  size: 12
 window:
   padding:
     x: 10
