--- a/laptop/waybar/confighost.jsonc
+++ b/laptop/waybar/confighost.jsonc
@@ -16,6 +16,7 @@
     },
     "format": "{capacity}% {icon}",
     "format-charging": "{capacity}% ",
+    "format-full": "{capacity}% ",
     "format-plugged": "{capacity}% ",
     "format-alt": "{time} {icon}",
     "format-icons": [" ", " ", " ", " ", " "]
