script to adjust monitors + related changes to hyprland config

--- a/desktop/hypr/hyprhost.conf
+++ b/desktop/hypr/hyprhost.conf
@@ -9,6 +9,7 @@ monitor= DP-3, 3440x1440@165, 0x0, 1
 # Execute on startup (host)
 #############################
 
+#autostart applications
 exec-once = [workspace 1 silent] firefox
 exec-once = [workspace 2 silent] alacritty
 exec-once = [workspace 3 silent] firefox-developer-edition
