--- a/laptop/hypr/hyprhost.conf
+++ b/laptop/hypr/hyprhost.conf
@@ -2,13 +2,23 @@
 # Monitor configuration
 #############################
 
-# main monitor declaration
+# default monitor declaration (laptop monitor)
 monitor = eDP-1, 1920x1080@60, 0x0, 1
+
+# second monitor
+monitor = HDMI-A-1, preferred, auto, 1
+
+# third monitor
+monitor = DP-3, preferred, auto, 1
 
 #############################
 # Execute on startup (host)
 #############################
 
+#check for external monitors
+exec-once = monitors-laptop.sh
+
+#autostart applications
 exec-once = [workspace 1 silent] firefox
 exec-once = [workspace 2 silent] alacritty #workspace 2
 exec-once = [workspace 3 silent] firefox-developer-edition #workspace 3
@@ -45,3 +55,18 @@ windowrulev2 = workspace 6 silent, class:^(Spotify)$ # force spotify to the work
 
 binde = , XF86MonBrightnessDown, exec, backlight_control -10
 binde = , XF86MonBrightnessUp, exec, backlight_control +10
+
+#############################
+# Workspaces binds
+#############################
+
+wsbind = 1, HDMI-A-1
+wsbind = 2, HDMI-A-1
+wsbind = 3, HDMI-A-1
+wsbind = 4, HDMI-A-1
+
+wsbind = 5, DP-3
+wsbind = 6, DP-3
+wsbind = 7, DP-3
+wsbind = 8, DP-3
+wsbind = 9, DP-3
