--- a/main/waybar/config-modules.jsonc
+++ b/main/waybar/config-modules.jsonc
@@ -1,40 +1,9 @@
 {
-  "include": "$XDG_CONFIG_HOME/waybar/confighost.jsonc",
-
-  "layer": "top", // Waybar at top layer
-  "position": "top", // Waybar position (top|bottom|left|right)
-  "height": 30, // Waybar height (to be removed for auto height)
-  "spacing": 0, // Gaps between modules (4px)
-  "margin-top": 10,
-  "margin-left": 10,
-  "margin-right": 10,
-  // Choose the order of the modules
   // Modules configuration
-  "wlr/workspaces": {
-    "format": "{icon}",
-    "on-click": "activate",
-    "on-scroll-up": "hyprctl dispatch workspace e+1",
-    "on-scroll-down": "hyprctl dispatch workspace e-1",
-    "active-only": false,
-    "sort-by-number": true,
-    "persistent_workspaces": {
-      "1": [],
-      "2": [],
-      "3": [],
-      "4": [],
-      "5": [],
-      "6": [],
-      "7": [],
-      "8": [],
-      "9": []
-    }
-  },
-
   "custom/logo": {
     "format": "",
     "on-click": "rofi -show run"
   },
-
   "mpris": {
     "format": "{status_icon} {artist} - {title} {player_icon}",
     "format-paused": "{status_icon} {artist} - {title} {player_icon}",
@@ -56,6 +25,23 @@
       "locked": "",
       "unlocked": ""
     }
+  },
+  "battery": {
+    "states": {
+      "warning": 30,
+      "critical": 15
+    },
+    "format": "{capacity}% {icon}",
+    "format-charging": "{capacity}% ",
+    "format-full": "{capacity}% ",
+    "format-plugged": "{capacity}% ",
+    "format-alt": "{time} {icon}",
+    "format-icons": [" ", " ", " ", " ", " "]
+  },
+  "temperature": {
+    "critical-threshold": 80,
+    "format": "{temperatureC}°C {icon}",
+    "format-icons": ["", "", ""]
   },
   "clock": {
     "format-alt": "{:%Y-%m-%d}"
