restructured shared configs: now the specific calls the general (was the opposite)

--- a/desktop/hypr/hyprland.conf
+++ b/desktop/hypr/hyprland.conf
@@ -1,4 +1,10 @@
 #############################
+# source general config
+#############################
+
+source = ~/.config/hypr/hypr-general.conf
+
+#############################
 # Monitor configuration
 #############################
 
