--- a/laptop/hypr/hyprland.conf
+++ b/laptop/hypr/hyprland.conf
@@ -1,4 +1,10 @@
 #############################
+# source general config
+#############################
+
+source = ~/.config/hypr/hypr-general.conf
+
+#############################
 # Monitor configuration
 #############################
 
