Hyprland config, prettier animations, few more keybinds

--- a/main/hypr/hypr-general.conf
+++ b/main/hypr/hypr-general.conf
@@ -19,8 +19,8 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
 
 # general window configuration
 general {
-  gaps_in = 5
-  gaps_out = 10
+  gaps_in = 2.5
+  gaps_out = 5
   border_size = 2
   col.active_border = rgb(000000)
   col.inactive_border = rgba(595959aa)
@@ -30,8 +30,7 @@ general {
 # appearance settings
 decoration {
   rounding = 5
-  blur = no
-
+  blur = yes
   drop_shadow = yes
   shadow_range = 4
   shadow_render_power = 3
@@ -41,13 +40,16 @@ decoration {
 # animations configuration
 animations {
   enabled = yes
-  bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-  animation = windows, 1, 7, myBezier
-  animation = windowsOut, 1, 7, default, popin 80%
-  animation = border, 1, 10, default
-  animation = borderangle, 1, 8, default
-  animation = fade, 1, 7, default
-  animation = workspaces, 1, 6, default
+  bezier = overshot, 0.05, 0.9, 0.1, 1.05
+  bezier = smoothOut, 0.36, 0, 0.66, -0.56
+  bezier = smoothIn, 0.25, 1, 0.5, 1
+  animation = windows, 1, 5, overshot, slide
+  animation = windowsOut, 1, 4, smoothOut, slide
+  animation = windowsMove, 1, 4, default
+  animation = border, 1, 5, default
+  animation = fade, 1, 5, smoothIn
+  animation = fadeDim, 1, 5, smoothIn
+  animation = workspaces, 1, 2, default
 }
 
 #############################
@@ -73,7 +75,14 @@ master {
 $mainMod = SUPER
 $mainModShift = SUPER_SHIFT
 
-# window keybinds
+# general keybinds
+bind = $mainMod, C, killactive
+bind = $mainModShift, M, exit
+bind = $mainMod, V, togglefloating,
+bind = $mainMod, P, pseudo # dwindle
+bind = $mainMod, M, fullscreen, 0 # toggle fullscreen
+
+# program keybinds
 bindr = $mainMod, SUPER_L, exec, pkill rofi || rofi -show drun #app launcher
 bind = $mainMod, R, exec, pkill rofi || rofi -show run #general launcher
 bind = $mainMod, Z, exec, pkill rofi || rofi -show calc #calculatorhypr
@@ -81,16 +90,9 @@ bind = ALT, F4, exec, pkill rofi || power.sh #powermenu
 bind = $mainMod, Q, exec, alacritty # terminal emulator (default)
 bind = $mainModShift, Q, exec, kitty # terminal emulator (secondary)
 bind = $mainMod, W, exec, firefox
-bind = $mainMod, M, exec, LD_PRELOAD=/usr/lib/spotifywm.so /usr/share/spotify/spotify-launcher
 bind = $mainMod, B, exec, killall waybar && waybar
-bind = $mainModShift, B, exec, eww reload
-bind = $mainMod, C, killactive,
-bind = $mainModShift, M, exit,
 bind = $mainMod, E, exec, thunar
-bind = $mainMod, V, togglefloating, 
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, S, togglesplit, # dwindle
-
+bind = $mainModShift, B, exec, eww reload
 bind = $mainModShift, S, exec, screenshot.sh # screenshot script using grim and slurp
 
 # special keys keybinds
@@ -106,6 +108,12 @@ bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
+
+# window resizing
+bind = $mainMod CTRL, left, resizeactive, -20 0
+bind = $mainMod CTRL, right, resizeactive, 20 0
+bind = $mainMod CTRL, up, resizeactive, 0 -20
+bind = $mainMod CTRL, down, resizeactive, 0 20
 
 # workspaces keybinds
 bind = $mainMod, 1, workspace, 1
