added a few window rules among other small changes

--- a/main/hypr/hypr-general.conf
+++ b/main/hypr/hypr-general.conf
@@ -147,4 +147,10 @@ bindm = $mainMod, mouse:273, resizewindow
 # Window Rules
 #############################
 
+#spotify
 windowrulev2 = tile, class:^(Spotify)$ #make spotify work with tiling window managers - spotifywm is required
+
+#pavucontrol
+windowrule = float, pavucontrol
+windowrule = size 50% 80%, pavucontrol
+windowrule = center, pavucontrol
