--- a/laptop/waybar/config.jsonc
+++ b/laptop/waybar/config.jsonc
@@ -2,10 +2,10 @@
   {
     "include": "$XDG_CONFIG_HOME/waybar/config-general.jsonc",
     "output": "eDP-1",
-    "layer": "top", // Waybar at top layer
-    "position": "top", // Waybar position (top|bottom|left|right)
-    "height": 35, // Waybar height (to be removed for auto height)
-    "spacing": 0, // Gaps between modules (4px)
+    "layer": "top",
+    "position": "top",
+    "height": 35,
+    "spacing": 0,
     "margin-top": 5,
     "margin-left": 5,
     "margin-right": 5,
@@ -42,10 +42,10 @@
   {
     "include": "$XDG_CONFIG_HOME/waybar/config-general.jsonc",
     "output": "HDMI-A-1",
-    "layer": "top", // Waybar at top layer
-    "position": "top", // Waybar position (top|bottom|left|right)
-    "height": 35, // Waybar height (to be removed for auto height)
-    "spacing": 0, // Gaps between modules (4px)
+    "layer": "top",
+    "position": "top",
+    "height": 35,
+    "spacing": 0,
     "margin-top": 5,
     "margin-left": 5,
     "margin-right": 5,
@@ -77,10 +77,10 @@
   {
     "include": "$XDG_CONFIG_HOME/waybar/config-general.jsonc",
     "output": "DP-3",
-    "layer": "top", // Waybar at top layer
-    "position": "top", // Waybar position (top|bottom|left|right)
-    "height": 35, // Waybar height (to be removed for auto height)
-    "spacing": 0, // Gaps between modules (4px)
+    "layer": "top",
+    "position": "top",
+    "height": 35,
+    "spacing": 0,
     "margin-top": 5,
     "margin-left": 5,
     "margin-right": 5,
