--- a/main/hypr/hypr-general.conf
+++ b/main/hypr/hypr-general.conf
@@ -8,10 +8,11 @@ monitor=, highres, auto, 1
 # Execute on startup
 #############################
 
-exec-once = hyprpaper # wallpaper
 exec-once = waybar # top status bar
 exec-once = dunst # notification-daemon
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
+
+exec = hyprpaper # wallpaper
 
 #############################
 # Appearance / Animations
