removed default hyprland logo

--- a/main/hypr/hypr-general.conf
+++ b/main/hypr/hypr-general.conf
@@ -52,6 +52,14 @@ animations {
 }
 
 #############################
+# Miscellaneous
+#############################
+
+misc {
+  disable_hyprland_logo = true
+}
+
+#############################
 # Behavior
 #############################
 
