--- a/main/hypr/hypr-general.conf
+++ b/main/hypr/hypr-general.conf
@@ -12,6 +12,9 @@ exec-once = waybar # top status bar
 exec-once = dunst # notification-daemon
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
 
+exec = swww init # wallpaper daemon
+exec = wallpaper.sh
+
 #############################
 # Appearance / Animations
 #############################
