--- a/main/hypr/hypr-general.conf
+++ b/main/hypr/hypr-general.conf
@@ -12,7 +12,7 @@ exec-once = waybar # top status bar
 exec-once = dunst # notification-daemon
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
 
-exec = swww init # wallpaper daemon
+exec = swww-daemon # wallpaper daemon
 exec = wallpaper.sh
 
 #############################
