added record script

--- a/main/hypr/hypr-general.conf
+++ b/main/hypr/hypr-general.conf
@@ -11,10 +11,8 @@ monitor=, highres, auto, 1
 exec-once = waybar # top status bar
 exec-once = dunst # notification-daemon
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
-
-exec = gammastep # night mode
-exec = swww-daemon # wallpaper daemon
-exec = wallpaper.sh
+exec-once = swww-daemon # wallpaper daemon
+exec-once = wallpaper.sh
 
 #############################
 # Appearance / Animations
@@ -34,6 +32,8 @@ general {
 decoration {
   rounding = 5
   blur = yes
+  blur_size = 5
+  blur_passes = 1
   drop_shadow = yes
   shadow_range = 4
   shadow_render_power = 3
@@ -105,6 +105,7 @@ bind = $mainMod, B, exec, killall waybar && waybar
 bind = $mainMod, E, exec, thunar
 bind = $mainModShift, B, exec, eww reload
 bind = $mainModShift, S, exec, screenshot.sh # screenshot script using grim and slurp
+bind = $mainModShift, R, exec, record.sh # screen record using wf-recorder and slurp
 
 # special keys keybinds
 binde = , XF86AudioLowerVolume, exec, pulsemixer --change-volume -5
