added auto dispatch to workspace 3

--- a/main/hypr/hypr-general.conf
+++ b/main/hypr/hypr-general.conf
@@ -14,6 +14,8 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
 exec-once = swww-daemon # wallpaper daemon
 exec-once = wallpaper.sh
 
+exec-once = hyprctl dispatch workspace 3
+
 #############################
 # Appearance / Animations
 #############################
