--- a/main/hypr/hypr-general.conf
+++ b/main/hypr/hypr-general.conf
@@ -11,8 +11,9 @@ monitor=, highres, auto, 1
 exec-once = waybar # top status bar
 exec-once = dunst # notification-daemon
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
-exec-once = swww-daemon # wallpaper daemon
-exec-once = wallpaper.sh
+
+exec = swww-daemon # wallpaper daemon
+exec = wallpaper.sh
 
 exec-once = hyprctl dispatch workspace 3
 
@@ -103,11 +104,12 @@ bind = ALT, F4, exec, pkill rofi || power.sh #powermenu
 bind = $mainMod, Q, exec, alacritty # terminal emulator (default)
 bind = $mainModShift, Q, exec, kitty # terminal emulator (secondary)
 bind = $mainMod, W, exec, firefox
-bind = $mainMod, B, exec, killall waybar && waybar
 bind = $mainMod, E, exec, thunar
+bind = $mainMod, B, exec, killall waybar && waybar
 bind = $mainModShift, B, exec, eww reload
 bind = $mainModShift, S, exec, screenshot.sh # screenshot script using grim and slurp
 bind = $mainModShift, R, exec, record.sh # screen record using wf-recorder and slurp
+bind = $mainModShift, L, exec, swaylock #screen locker
 
 # special keys keybinds
 binde = , XF86AudioLowerVolume, exec, pulsemixer --change-volume -5
@@ -140,15 +142,15 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
+bind = $mainModShift, 1, movetoworkspace, 1
+bind = $mainModShift, 2, movetoworkspace, 2
+bind = $mainModShift, 3, movetoworkspace, 3
+bind = $mainModShift, 4, movetoworkspace, 4
+bind = $mainModShift, 5, movetoworkspace, 5
+bind = $mainModShift, 6, movetoworkspace, 6
+bind = $mainModShift, 7, movetoworkspace, 7
+bind = $mainModShift, 8, movetoworkspace, 8
+bind = $mainModShift, 9, movetoworkspace, 9
 
 # mouse keybinds
 bind = $mainMod, mouse_down, workspace, e+1
