--- a/main/hypr/hypr-general.conf
+++ b/main/hypr/hypr-general.conf
@@ -13,7 +13,7 @@ exec-once = dunst # notification-daemon
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
 
 exec = swww-daemon # wallpaper daemon
-exec = wallpaper.sh
+exec = wallpaper
 
 exec-once = hyprctl dispatch workspace 3
 
@@ -100,15 +100,15 @@ bind = $mainMod, M, fullscreen, 0 # toggle fullscreen
 bindr = $mainMod, SUPER_L, exec, pkill rofi || rofi -show drun #app launcher
 bind = $mainMod, R, exec, pkill rofi || rofi -show run #general launcher
 bind = $mainMod, Z, exec, pkill rofi || rofi -show calc #calculatorhypr
-bind = ALT, F4, exec, pkill rofi || power.sh #powermenu
+bind = ALT, F4, exec, pkill rofi || power #powermenu
 bind = $mainMod, Q, exec, alacritty # terminal emulator (default)
 bind = $mainModShift, Q, exec, kitty # terminal emulator (secondary)
 bind = $mainMod, W, exec, firefox
 bind = $mainMod, E, exec, thunar
 bind = $mainMod, B, exec, killall waybar && waybar
 bind = $mainModShift, B, exec, eww reload
-bind = $mainModShift, S, exec, screenshot.sh # screenshot script using grim and slurp
-bind = $mainModShift, R, exec, record.sh # screen record using wf-recorder and slurp
+bind = $mainModShift, S, exec, screenshot # screenshot script using grim and slurp
+bind = $mainModShift, R, exec, record # screen record using wf-recorder and slurp
 bind = $mainModShift, L, exec, swaylock #screen locker
 
 # special keys keybinds
