style changes to hypr-general (no borders, border color, no blur)

--- a/main/hypr/hypr-general.conf
+++ b/main/hypr/hypr-general.conf
@@ -23,18 +23,18 @@ exec-once = hyprctl dispatch workspace 3
 
 # general window configuration
 general {
-  gaps_in = 2.5
-  gaps_out = 5
+  gaps_in = 0
+  gaps_out = 0
   border_size = 2
-  col.active_border = rgb(000000)
+  col.active_border = rgb(ffa500)
   col.inactive_border = rgba(595959aa)
   layout = dwindle
 }
 
 # appearance settings
 decoration {
-  rounding = 5
-  blur = yes
+  rounding = 0
+  blur = no
   blur_size = 5
   blur_passes = 1
   drop_shadow = yes
