--- a/laptop/waybar/old/old-1/config.jsonc
+++ b/laptop/waybar/old/old-1/config.jsonc
@@ -6,15 +6,10 @@
     "position": "top",
     "height": 35,
     "spacing": 0,
-    "margin-top": 0,
-    "margin-left": 0,
-    "margin-right": 0,
-    "modules-left": [
-      "custom/logo",
-      "mpris",
-      "keyboard-state",
-      "custom/recording"
-    ],
+    "margin-top": 5,
+    "margin-left": 5,
+    "margin-right": 5,
+    "modules-left": ["custom/logo", "mpris", "keyboard-state", "custom/recording"],
     "modules-center": ["wlr/workspaces"],
     "modules-right": [
       "pulseaudio",
@@ -51,15 +46,10 @@
     "position": "top",
     "height": 35,
     "spacing": 0,
-    "margin-top": 0,
-    "margin-left": 0,
-    "margin-right": 0,
-    "modules-left": [
-      "custom/logo",
-      "mpris",
-      "keyboard-state",
-      "custom/recording"
-    ],
+    "margin-top": 5,
+    "margin-left": 5,
+    "margin-right": 5,
+    "modules-left": ["custom/logo", "mpris", "keyboard-state", "custom/recording"],
     "modules-center": ["wlr/workspaces"],
     "modules-right": [
       "pulseaudio",
@@ -91,9 +81,9 @@
     "position": "top",
     "height": 35,
     "spacing": 0,
-    "margin-top": 0,
-    "margin-left": 0,
-    "margin-right": 0,
+    "margin-top": 5,
+    "margin-left": 5,
+    "margin-right": 5,
     "modules-center": ["wlr/workspaces"],
     "wlr/workspaces": {
       "format": "{icon}",
