--- a/laptop/waybar/config.jsonc
+++ b/laptop/waybar/config.jsonc
@@ -4,7 +4,7 @@
     "output": "eDP-1",
     "layer": "top",
     "position": "top",
-    "height": 35,
+    "height": 40,
     "spacing": 0,
     "margin-top": 0,
     "margin-left": 0,
@@ -41,6 +41,17 @@
         "7": [],
         "8": [],
         "9": []
+      },
+      "format-icons": {
+        "1": "",
+        "2": "",
+        "3": "",
+        "4": "",
+        "5": "",
+        "6": "",
+        "7": "",
+        "8": "",
+        "9": ""
       }
     }
   },
@@ -49,7 +60,7 @@
     "output": "HDMI-A-1",
     "layer": "top",
     "position": "top",
-    "height": 35,
+    "height": 40,
     "spacing": 0,
     "margin-top": 0,
     "margin-left": 0,
@@ -81,6 +92,12 @@
         "2": [],
         "3": [],
         "4": []
+      },
+      "format-icons": {
+        "1": "",
+        "2": "",
+        "3": "",
+        "4": ""
       }
     }
   },
@@ -89,7 +106,7 @@
     "output": "DP-3",
     "layer": "top",
     "position": "top",
-    "height": 35,
+    "height": 40,
     "spacing": 0,
     "margin-top": 0,
     "margin-left": 0,
@@ -108,6 +125,13 @@
         "7": [],
         "8": [],
         "9": []
+      },
+      "format-icons": {
+        "5": "",
+        "6": "",
+        "7": "",
+        "8": "",
+        "9": ""
       }
     }
   }
