--- a/main/waybar/config-general.jsonc
+++ b/main/waybar/config-general.jsonc
@@ -31,9 +31,9 @@
   },
 
   "custom/recording": {
-    "exec": "exec $XDG_CONFIG_HOME/waybar/scripts/record-widget.sh",
+    "exec": "exec $XDG_CONFIG_HOME/waybar/scripts/record-widget",
     "exec-on-event": false,
-    "on-click": "pkill -INT -P \"$(pgrep -xo record.sh)\" wf-recorder"
+    "on-click": "pkill -INT -P \"$(pgrep -xo record)\" wf-recorder"
   },
 
   "pulseaudio": {
