added network module to waybar

--- a/laptop/waybar/config.jsonc
+++ b/laptop/waybar/config.jsonc
@@ -16,6 +16,7 @@
   "modules-center": ["wlr/workspaces"],
   "modules-right": [
     "pulseaudio",
+    "network",
     "backlight",
     "cpu",
     "memory",
