added network module to waybar (for desktop)

--- a/desktop/waybar/config.jsonc
+++ b/desktop/waybar/config.jsonc
@@ -12,6 +12,7 @@
   "modules-center": ["wlr/workspaces"],
   "modules-right": [
     "pulseaudio",
+    "network",
     "backlight",
     "cpu",
     "memory",
