--- a/main/tmux/tmux.conf
+++ b/main/tmux/tmux.conf
@@ -1,3 +1,10 @@
 set -g status on
 set -g mode-keys vi
 set -g status-keys vi
+
+set -g @catppuccin_flavour 'mocha'
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+run '~/.config/tmux/plugins/tpm/tpm'
