changed logout method to use loginctl (it avoids os error 111)

--- a/main/hypr/hypr-general.conf
+++ b/main/hypr/hypr-general.conf
@@ -91,7 +91,7 @@ $mainModShift = SUPER_SHIFT
 
 # general keybinds
 bind = $mainMod, C, killactive
-bind = $mainModShift, M, exit
+bind = $mainModShift, M, exec, loginctl kill-user $(whoami) 
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, pseudo # dwindle
 bind = $mainMod, M, fullscreen, 0 # toggle fullscreen
