fixed volume icon in waybar general configuration

--- a/main/waybar/config-general.jsonc
+++ b/main/waybar/config-general.jsonc
@@ -41,11 +41,11 @@
 
   "pulseaudio": {
     "format": "{volume}% {icon} | {format_source}",
-    "format-muted": "婢 | {format_source}",
+    "format-muted": " | {format_source}",
     "format-source": "{volume}% ",
     "format-source-muted": "",
     "format-icons": {
-      "default": ["", "", "墳", ""]
+      "default": ["", "", ""]
     },
     "on-click": "pavucontrol",
     "on-click-right": "pactl set-sink-mute @DEFAULT_SINK@ toggle"
