--- a/main/starship.toml
+++ b/main/starship.toml
@@ -6,8 +6,9 @@ add_newline = false
 
 # prompt character
 [character]     
-success_symbol = "[➜](bold green)"
-error_symbol = "[➜](bold red)"
+success_symbol = "[❯](bold green)"
+error_symbol = "[❯](bold red)"
+vimcmd_symbol = "[❮](bold green)"
 
 [shell]
 zsh_indicator = '\[Z\]'
