--- a/main/hypr/hypr-general.conf
+++ b/main/hypr/hypr-general.conf
@@ -26,7 +26,7 @@ general {
   gaps_in = 0
   gaps_out = 0
   border_size = 2
-  col.active_border = rgb(ffa500)
+  col.active_border = rgb(000000)
   col.inactive_border = rgba(595959aa)
   layout = dwindle
 }
