added new kitty theme and changed to JetBrainsMono for both terminal emulators

--- a/main/kitty/kitty.conf
+++ b/main/kitty/kitty.conf
@@ -2,7 +2,7 @@
 # Fonts
 #############################
 
-font_family MesloLGSNerdFont
+font_family JetBrainsMonoNF
 bold_font auto
 italic_font auto
 bold_italic_font auto
@@ -10,7 +10,7 @@ font_size 13
 force_ltr no
 # symbol_map
 # narrow_symbols
-disable_ligatures never
+disable_ligatures always
 font_features none
 # modify_font
 box_drawing_scale 0.001, 1, 1.5, 2
@@ -20,8 +20,9 @@ undercurl_style thin-sparse
 # Cursor customization
 #############################
 
-cursor #cccccc
-cursor_text_color #111111
+
+cursor #928374
+cursor_text_color background
 cursor_shape block
 cursor_beam_thickness 1.5
 cursor_underline_thickness 2.0
@@ -45,7 +46,7 @@ touch_scroll_multiplier 1.0
 #############################
 
 mouse_hide_wait 3.0
-url_color #0087bd
+url_color #83a598
 url_style curly
 open_url_with default
 url_prefixes file ftp ftps gemini git gopher http https irc ircs kitty mailto news sftp ssh
@@ -83,7 +84,7 @@ sync_to_monitor yes
 
 enable_audio_bell no
 visual_bell_duration 0.0
-visual_bell_color none
+visual_bell_color #8ec07c
 window_alert_on_bell yes
 bell_on_tab "🔔 "
 command_on_bell none
@@ -105,8 +106,9 @@ window_margin_width 0
 single_window_margin_width -1
 window_padding_width 5
 placement_strategy center
-active_border_color #00ff00
-bell_border_color #ff5a00
+active_border_color #d3869b
+inactive_border_color #665c54
+bell_border_color #8ec07c
 inactive_text_alpha 1.0
 hide_window_decorations no
 window_logo_path none
@@ -421,3 +423,9 @@ map cmd+h hide_macos_app 🍎
 map opt+cmd+h hide_macos_other_apps 🍎
 map cmd+m minimize_macos_window 🍎
 map cmd+q quit 🍎
+
+#############################
+# Theme
+#############################
+
+include ./gruvbox_dark.conf
