--- a/main/alacritty/alacritty.yml
+++ b/main/alacritty/alacritty.yml
@@ -34,16 +34,16 @@ cursor:
 draw_bold_text_with_bright_colors: true
 font:
   bold:
-    family: "MesloLGS Nerd Font"
+    family: "JetBrainsMono Nerd Font"
     style: Bold
   bold_italic:
-    family: "MesloLGS Nerd Font"
+    family: "JetBrainsMono Nerd Font"
     style: BoldItalic
   italic:
-    family: "MesloLGS Nerd Font"
+    family: "JetBrainsMono Nerd Font"
     style: MediumItalic
   normal:
-    family: "MesloLGS Nerd Font"
+    family: "JetBrainsMono Nerd Font"
     style: Medium
   size: 12
 window:
