added center window rule for jetbrains toolbox

--- a/main/hypr/hypr-general.conf
+++ b/main/hypr/hypr-general.conf
@@ -169,3 +169,4 @@ windowrulev2 = tile, class:^(Spotify)$ #make spotify work with tiling window man
 windowrule = float, pavucontrol
 windowrule = size 50% 80%, pavucontrol
 windowrule = center, pavucontrol
+windowrule = center, jetbrains-toolbox
