added jetBrains Toolbox autostart to workspace 3 on both machines

--- a/desktop/hypr/hyprland.conf
+++ b/desktop/hypr/hyprland.conf
@@ -18,6 +18,7 @@ monitor= DP-3, 3440x1440@165, 0x0, 1
 #autostart applications
 exec-once = [workspace 1 silent] firefox
 exec-once = [workspace 2 silent] alacritty -e tmux
+exec-once = [workspace 3 silent] jetbrains-toolbox
 exec-once = [workspace 4 silent] thunderbird
 exec-once = [workspace 4 silent] keepassxc 
 exec-once = spotify # spotify, see window rules below
