--- a/special/ideavimrc/.ideavimrc
+++ b/special/ideavimrc/.ideavimrc
@@ -1,5 +1,39 @@
+" Handlers
+sethandler <c-t> a:ide
+
+sethandler <c-j> a:vim
+sethandler <c-k> a:vim
+sethandler <c-l> a:vim
+sethandler <c-h> a:vim
+
 " Options
 set nooldundo
 
+set relativenumber
+set number
+
+set clipboard+=unnamed
+set clipboard+=ideaput
+
 " Keymaps
+let mapleader=" "
 imap jk <Esc>
+
+nnoremap \o :e ~/.ideavimrc<CR>
+nnoremap \r :action IdeaVim.ReloadVimRc.reload<CR>
+
+nnoremap <leader>za :action ToggleDistractionFreeMode<CR>
+
+nnoremap <leader>sv :action SplitVertically<CR>
+nnoremap <leader>sh :action SplitHorizontally<CR>
+nnoremap <leader>sx :action Unsplit<CR>
+
+nnoremap <c-h> <c-w>h
+nnoremap <c-l> <c-w>l
+nnoremap <c-j> <c-w>j
+nnoremap <c-k> <c-w>k
+
+nnoremap <leader>bp :action PreviousTab<CR>
+nnoremap <leader>bn :action NextTab<CR>
+
+nnoremap <leader>r :action Refactorings.QuickListPopupAction<CR>
