added battery status keybind for laptop only

--- a/laptop/hypr/hyprland.conf
+++ b/laptop/hypr/hyprland.conf
@@ -59,6 +59,8 @@ windowrulev2 = workspace 6 silent, class:^(Spotify)$ # force spotify to the work
 binde = , XF86MonBrightnessDown, exec, backlight_control -10
 binde = , XF86MonBrightnessUp, exec, backlight_control +10
 
+bind = $mainMod, F1, exec, battery-status #show battery level
+
 #############################
 # Workspaces binds
 #############################
