--- a/main/hypr/hypr-general.conf
+++ b/main/hypr/hypr-general.conf
@@ -111,6 +111,8 @@ bind = $mainModShift, S, exec, screenshot # screenshot script using grim and slu
 bind = $mainModShift, R, exec, record # screen record using wf-recorder and slurp
 bind = $mainModShift, L, exec, swaylock #screen locker
 
+# notification keybinds
+
 # special keys keybinds
 binde = , XF86AudioLowerVolume, exec, pulsemixer --change-volume -5
 binde = , XF86AudioRaiseVolume, exec, pulsemixer --change-volume +5 --max-volume 100
