--- a/main/hypr/hypr-general.conf
+++ b/main/hypr/hypr-general.conf
@@ -10,6 +10,7 @@ monitor=, highres, auto, 1
 
 exec-once = dunst # notification-daemon
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
+exec-once = dropbox # start dropbox daemon
 
 exec = xremap $XDG_CONFIG_DIR/xremap/config.yml
 exec = swww-daemon # wallpaper daemon
