found a better way to manage keybinds for jetbrains ide's + added config for xremap (mapping ALT+<vim-nav> to arrow keys)

--- a/main/hypr/hypr-general.conf
+++ b/main/hypr/hypr-general.conf
@@ -11,6 +11,7 @@ monitor=, highres, auto, 1
 exec-once = dunst # notification-daemon
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
 
+exec = xremap $XDG_CONFIG_DIR/xremap/config.yml
 exec = swww-daemon # wallpaper daemon
 exec = wallpaper
 
