added time-date notification script

--- a/main/hypr/hypr-general.conf
+++ b/main/hypr/hypr-general.conf
@@ -113,6 +113,7 @@ bind = $mainModShift, R, exec, record # screen record using wf-recorder and slur
 bind = $mainModShift, L, exec, swaylock #screen locker
 
 # notification keybinds
+bind = $mainMod, F2, exec, time-date #show current time and date
 
 # special keys keybinds
 binde = , XF86AudioLowerVolume, exec, pulsemixer --change-volume -5
