added per mice device sensibility configuration

--- a/laptop/hypr/hyprland.conf
+++ b/laptop/hypr/hyprland.conf
@@ -37,13 +37,20 @@ exec-once = spotify # spotify, see window rules below
 
 # mouse/touchpad and keyboard configuration
 input {
-    kb_layout = us
-    kb_variant = intl
+  kb_layout = us
+  kb_variant = intl
 
-    sensitivity = -0.2 # -1.0 - 1.0, 0 means no modification.
-    touchpad {
-      natural_scroll = true
-    }
+  sensitivity = -0.7 # -1.0 - 1.0, 0 means no modification.
+  touchpad {
+    natural_scroll = true
+  }
+}
+
+device:synps/2-synaptics-touchpad {
+  sensitivity = 0.0
+}
+device:tpps/2-elan-trackpoint {
+  sensitivity = -0.4
 }
 
 #############################
