added natural_scrolling back for touchpad device

--- a/laptop/hypr/hyprland.conf
+++ b/laptop/hypr/hyprland.conf
@@ -48,6 +48,7 @@ input {
 
 device:synps/2-synaptics-touchpad {
   sensitivity = 0.0
+  natural_scroll = true
 }
 device:tpps/2-elan-trackpoint {
   sensitivity = -0.4
