--- a/main/hypr/hypr-general.conf
+++ b/main/hypr/hypr-general.conf
@@ -12,7 +12,7 @@ exec-once = dunst # notification-daemon
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
 exec-once = dropbox # start dropbox daemon
 
-exec = xremap $XDG_CONFIG_DIR/xremap/config.yml
+exec = xremap ~/.config/xremap/config.yml # key remapper
 exec = swww-daemon # wallpaper daemon
 exec = wallpaper
 
