--- a/special/httpd_conf/httpd.conf
+++ b/special/httpd_conf/httpd.conf
@@ -258,16 +258,16 @@ DocumentRoot "/opt/lampp/htdocs"
     #
     Require all granted
 </Directory>
-<Directory "/home/raphaelw/Projects/TurboMail/src">
-    Options Indexes FollowSymLinks ExecCGI Includes
-    AllowOverride All
-    Require all granted
-</Directory>
-<Directory "/home/raphaelw/Documents/LO07">
-    Options Indexes FollowSymLinks ExecCGI Includes
-    AllowOverride All
-    Require all granted
-</Directory>
+# <Directory "/home/raphaelw/Projects/TurboMail/src">
+#     Options Indexes FollowSymLinks ExecCGI Includes
+#     AllowOverride All
+#     Require all granted
+# </Directory>
+# <Directory "/home/raphaelw/Documents/LO07">
+#     Options Indexes FollowSymLinks ExecCGI Includes
+#     AllowOverride All
+#     Require all granted
+# </Directory>
 
 #
 # DirectoryIndex: sets the file that Apache will serve if a directory
@@ -360,8 +360,6 @@ LogLevel warn
     # directives as to Alias.
     #
     ScriptAlias /cgi-bin/ "/opt/lampp/cgi-bin/"
-    Alias /TurboMail /home/raphaelw/Projects/TurboMail/src
-    Alias /LO07 /home/raphaelw/Documents/LO07
 </IfModule>
 
 <IfModule cgid_module>
