--- a/main/xremap/config.yml
+++ b/main/xremap/config.yml
@@ -1,7 +1,7 @@
 keymap:
   - name: Global
     remap:
-      ALT-h: left
-      ALT-l: right
-      ALT-k: up
-      ALT-j: down
+      ALT-SHIFT-h: left
+      ALT-SHIFT-l: right
+      ALT-SHIFT-k: up
+      ALT-SHIFT-j: down
