--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "main/tmux/plugins/tpm"]
 	path = main/tmux/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm.git
+[submodule "nvim"]
+	path = nvim
+	url = https://github.com/raphaelweis/nvim.git
