--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "main/nvim"]
+	path = main/nvim
+	url = https://github.com/raphaelweis/nvim.git
 [submodule "main/tmux/plugins/tpm"]
 	path = main/tmux/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm.git
