--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "main/nvim"]
 	path = main/nvim
 	url = https://github.com/raphaelweis/nvim.git
+[submodule "main/tmux"]
+	path = main/tmux
+	url = https://github.com/raphaelweis/tmux.git
