--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "main/tmux"]
 	path = main/tmux
 	url = https://github.com/raphaelweis/tmux.git
+[submodule "main/starship"]
+	path = main/starship
+	url = https://github.com/raphaelweis/starship.git
