--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "main/zsh"]
 	path = main/zsh
 	url = https://github.com/raphaelweis/zsh.git
+[submodule "main/git"]
+	path = main/git
+	url = https://github.com/raphaelweis/git.git
