--- a/main/hypr/hypr-general.conf
+++ b/main/hypr/hypr-general.conf
@@ -96,6 +96,7 @@ bind = $mainModShift, M, exec, loginctl kill-user $(whoami)
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, pseudo # dwindle
 bind = $mainMod, M, fullscreen, 0 # toggle fullscreen
+bind = $mainMod, S, togglesplit # toggle split
 
 # program keybinds
 bindr = $mainMod, SUPER_L, exec, pkill rofi || rofi -show drun #app launcher
@@ -128,6 +129,12 @@ bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
+
+# window swapping
+bind = $mainMod, left, swapwindow, l
+bind = $mainMod, down, swapwindow, d
+bind = $mainMod, up, swapwindow, u
+bind = $mainMod, right, swapwindow, r
 
 # window resizing
 bind = $mainMod CTRL, left, resizeactive, -20 0
